# indicator-application

./: ChangeLog  configure  configure.ac
data/: Makefile.am  indicator-application.desktop.in  indicator-application.service.in
data/upstart/: indicator-application.desktop.in
debian/: changelog  control  indicator-application.links  rules
docs/reference/: libappindicator-docs.sgml
docs/reference/html/: libappindicator-app-indicator.html
src/: application-service-watcher.c  generate-id.c
src/libappindicator/: app-indicator.c
